--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"python.analysis.extraPaths": ["./software_installation"]
+	"python.analysis.extraPaths": ["./software_installation", "./joint_control", "./kinematics"]
 }
